--- a/cv/main.css
+++ b/cv/main.css
@@ -102,4 +102,16 @@ button:active {
     box-shadow: inset -1px -1px 0 rgba(0, 0, 0, 0.5);
 }
 
+form{
+    accent-color: #eab308;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+input:focus-visible, textarea:focus-visible{
+    border: 1px solid #eab308;
+    outline: 3px solid #d9a407;
+}
 
